# game-engine

Libraries/glfw/: CMakeLists.txt
Libraries/glfw/examples/: CMakeLists.txt
Libraries/glfw/include/GLFW/: glfw3.h
Libraries/glfw/src/: CMakeLists.txt  context.c  init.c  input.c  internal.h  platform.c  platform.h  win32_init.c  win32_platform.h  win32_window.c  window.c
Libraries/glfw/tests/: CMakeLists.txt  joysticks.c  title.c
code/: CMakeLists.txt
code/core/: CMakeLists.txt  time.cpp  time.hpp  vertex_attribute.hpp
code/core/assets/: CMakeLists.txt  file.cpp  file.hpp  public.hpp
code/core/data/: camera.hpp  geometry.hpp  light.hpp
code/core/math/: CMakeLists.txt  public.hpp  rgb.hpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.hpp
code/engine/: CMakeLists.txt  file.cpp  file.hpp  public.hpp
code/engine/math/: vec3.hpp
code/graphics/: CMakeLists.txt
code/graphics/base/: buffer_data.hpp  buffer_location.hpp
code/graphics/opengl/: CMakeLists.txt  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  context.cpp  context.hpp  functions.cpp  functions.hpp  macros.hpp  object.hpp  pipeline.cpp  pipeline.hpp  private.hpp  public.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  stage.cpp  stage.hpp  vertex_array.cpp  vertex_array.hpp
code/platform/: CMakeLists.txt  input_instance.cpp  input_instance.hpp  platform_factory.cpp  platform_factory.hpp  platform_instance.cpp  platform_instance.hpp  platform_manager.cpp  platform_manager.hpp  platform_module.cpp  platform_module.hpp  public.hpp  window_callbacks.cpp  window_callbacks.hpp  window_instance.cpp  window_instance.hpp  window_manager.cpp  window_manager.hpp  window_size.hpp
code/platform/base/: factory.hpp  platform.hpp  platform_factory.hpp  window.hpp  window_config.hpp  window_size.hpp  window_state.hpp
code/platform/glfw/: CMakeLists.txt  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  public.hpp  window.cpp  window.hpp
code/platform/windows/: CMakeLists.txt  factory.cpp  factory.hpp  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  private.hpp  window.cpp  window.hpp
code/resources/: CMakeLists.txt  file.cpp
code/shared/: CMakeLists.txt
code/shared/core/: CMakeLists.txt  geometry_data.hpp  public.hpp  time.cpp  time.hpp  vertex.hpp  vertex_attribute.hpp
code/shared/core/data/: camera.hpp  light.hpp
code/shared/core/vertex/: attribute.hpp
code/shared/math/: CMakeLists.txt  vec2.hpp  vec3.cpp  vec3.hpp  vec4.hpp
code/shared/resources/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/gainput/: CMakeLists.txt
libraries/gainput/include/gainput/: GainputAllocator.h  GainputContainers.h  GainputHelpers.h  GainputInputDeltaState.h  GainputInputDevice.h  GainputInputDeviceKeyboard.h  GainputInputDeviceMouse.h  GainputInputManager.h  GainputInputMap.h  GainputInputState.h  GainputMapFilters.h  gainput.h
libraries/gainput/source/gainput/: GainputAllocator.cpp  GainputInputDeltaState.cpp  GainputInputDevice.cpp  GainputInputManager.cpp  GainputInputMap.cpp  GainputInputState.cpp  GainputMapFilters.cpp  GainputWindows.h  gainput.cpp
libraries/gainput/source/gainput/keyboard/: GainputInputDeviceKeyboard.cpp  GainputInputDeviceKeyboardImpl.h  GainputInputDeviceKeyboardWin.h
libraries/gainput/source/gainput/mouse/: GainputInputDeviceMouse.cpp  GainputInputDeviceMouseImpl.h  GainputInputDeviceMouseWin.h
libraries/glad/: CMakeLists.txt  glad.c  glad.cpp
libraries/glad/include/KHR/: khrplatform.h  khrplatform.hpp
libraries/glad/include/glad/: glad.h  glad.hpp
libraries/glfw/: CMakeLists.txt  LICENSE.md  README.md
libraries/glfw/examples/: CMakeLists.txt  boing.c  gears.c  particles.c  splitview.c  triangle-opengl.c  wave.c
libraries/glfw/include/GLFW/: glfw3.h  glfw3native.h
libraries/glfw/src/: CMakeLists.txt  context.c  init.c  input.c  internal.h  monitor.c  platform.c  platform.h  vulkan.c  wgl_context.c  win32_init.c  win32_module.c  win32_monitor.c  win32_platform.h  win32_thread.h  win32_window.c  window.c
libraries/glfw/tests/: CMakeLists.txt  cursor.c  events.c  reopen.c  title.c  title.cpp
libraries/glm/glm/: exponential.hpp  vec2.hpp  vec3.hpp  vec4.hpp
libraries/glm/glm/detail/: func_common.inl  glm.cpp
libraries/glm/glm/ext/: scalar_common.hpp
libraries/glm/glm/gtc/: type_ptr.hpp
